force-app/main/default/objects/DM_Repayment_Schedule__c/DM_Repayment_Schedule__c.object-meta.xml
<CustomObject>
    <label>DM Amortization Schedule</label>
    <nameField>
        <label>Dm Repayment Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Amortization Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>