force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_Balance__c.field-meta.xml
<CustomField>
    <fullName>DM_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Principal Balance</description>
    <inlineHelpText>Principal Balance</inlineHelpText>
    <label>DM Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>