force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Due_Amount__c</fullName>
    <label>DM Due_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>