force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Due_Date__c</fullName>
    <description>Due date</description>
    <inlineHelpText>The date on which the loan payment is due.</inlineHelpText>
    <label>DM Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>