force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_Due_Interest__c.field-meta.xml
<CustomField>
    <fullName>DM_Due_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Due Interest</description>
    <inlineHelpText>Due Interest</inlineHelpText>
    <label>DM Due Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>