force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_Due_Principal__c.field-meta.xml
<CustomField>
    <fullName>DM_Due_Principal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Due Principal</description>
    <inlineHelpText>Due Principal</inlineHelpText>
    <label>DM Due Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>