force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_Interest_Accrued_Not_Due__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Accrued_Not_Due__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Its the interest accrued on a daily basis, but not due until the due date.</description>
    <inlineHelpText>Its the interest accrued on a daily basis, but not due until the due date.</inlineHelpText>
    <label>DM Interest Accrued Not Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>