force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_Interest_Rounding_Error__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rounding_Error__c</fullName>
    <description>This field captures interest rounding error in amortization schedules.</description>
    <inlineHelpText>This field captures interest rounding error in amortization schedules.</inlineHelpText>
    <label>DM Interest Rounding Error</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>