force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_isBilledwasUnchecked__c.field-meta.xml
<CustomField>
    <fullName>DM_isBilledwasUnchecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM isBilledwasUnchecked</label>
    <type>Checkbox</type>
</CustomField>