force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_isPaid__c.field-meta.xml
<CustomField>
    <fullName>DM_isPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the scheduled payment is/was completely paid</description>
    <inlineHelpText>Checked if the scheduled payment is/was completely paid</inlineHelpText>
    <label>DM Is Paid</label>
    <type>Checkbox</type>
</CustomField>