force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_Loan_Product__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Loan Account</label>
    <referenceTo>DM_Loan_Account__c</referenceTo>
    <relationshipLabel>DM Repayment Schedules</relationshipLabel>
    <relationshipName>DM_Repayment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>