force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_Paid_Interest__c.field-meta.xml
<CustomField>
    <fullName>DM_Paid_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Paid Interest</description>
    <inlineHelpText>Paid Interest</inlineHelpText>
    <label>DM Paid Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>