force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_Paid_Principal__c.field-meta.xml
<CustomField>
    <fullName>DM_Paid_Principal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Paid Principal</description>
    <inlineHelpText>Paid Principal</inlineHelpText>
    <label>DM Paid Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>