force-app/main/default/objects/DM_Repayment_Schedule__c/fields/DM_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Transaction_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This represents the amount paid by the borrower towards this repayment schedule.</description>
    <inlineHelpText>This represents the amount paid by the borrower towards this repayment schedule.</inlineHelpText>
    <label>DM Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>