force-app/main/default/objects/DM_Repayment_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Migration_Status__c</columns>
    <columns>DM_Valid_Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>